@@ -28,6 +28,8 @@ NOTICE: Restart wiseService before capture when upgrading
 NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading
 
 4.0.2 2022/10/xx
+  - capture/viewer Add TLS Certificate Organisational Unit field parsing (PR #2038)
+  - all - better console output sanitization
 
 4.0.1 2022/10/18
   - addUser.js - remove WARNING adding first user
